--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -8,7 +8,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Organisation name</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.name }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.name }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
@@ -18,10 +18,10 @@
         </div>
       </dl>
 
-      <dl *ngIf="registrationDataToDisplay.companyHouseNumber" class="govuk-summary-list govuk-!-margin-bottom-0">
+      <dl *ngIf="registrationData.companyHouseNumber" class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Company registration number</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.companyHouseNumber }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.companyHouseNumber }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:history.back()"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
@@ -32,10 +32,10 @@
       </dl>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-0"
-        [ngClass]="{ 'govuk-summary-list--no-border':registrationDataToDisplay.dxNumber}">
+        [ngClass]="{ 'govuk-summary-list--no-border':registrationData.dxNumber}">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Organisation address</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.address }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.address }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)">
               Change<span class="govuk-visually-hidden">Organisation address</span>
@@ -44,10 +44,10 @@
         </div>
       </dl>
 
-      <dl *ngIf="registrationDataToDisplay.dxNumber" class="govuk-summary-list govuk-!-margin-bottom-0">
+      <dl *ngIf="registrationData.dxNumber" class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">DX reference</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.dxNumber }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.dxNumber }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/document-exchange-reference-details">
@@ -61,7 +61,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0 govuk-summary-list--no-border">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Service to access</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.services }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.services }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-services-access">
@@ -74,7 +74,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Organisation type</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.organisationType }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.organisationType }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)" routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-type">
               Change<span class="govuk-visually-hidden">Organisation type</span>
@@ -86,7 +86,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0 govuk-summary-list--no-border">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Regulatory organisation type</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.regulators[0].regulatorName }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.regulators[0].regulatorName }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
@@ -99,7 +99,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">What regulator are you (as an individual) registered with?</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.regulatorRegisteredWith }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.regulatorRegisteredWith }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
@@ -115,7 +115,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">First name</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.contactDetails.firstName }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.firstName }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
@@ -128,7 +128,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Last name</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.contactDetails.lastName }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.lastName }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
@@ -141,7 +141,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-0">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Email address</dt>
-          <dd class="govuk-summary-list__value">{{ registrationDataToDisplay.contactDetails.workEmailAddress }}</dd>
+          <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.workEmailAddress }}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
             routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
