Make changes based on PR comments

--- a/src/register-org/containers/registered-address/registered-address.component.html
+++ b/src/register-org/containers/registered-address/registered-address.component.html
@@ -1,10 +1,10 @@
-<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1" #mainContent>
+<main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <!-- go back to previous page if not on international page, reset page otherwise -->
-      <a *ngIf="!startedInternational && !addressChosen" class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <a *ngIf="!startedInternational && !addressChosen" class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
       <a *ngIf="startedInternational || addressChosen" class="govuk-back-link"
-        href="javascript:window.location.href=window.location.href">Back</a>
+        href="javascript:void(0)" (click)="onPageRefresh()">Back</a>
       <xuilib-hmcts-error-summary [errorMessages]="addressErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">{{headingText}}</h1>
