--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -3,9 +3,50 @@
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:history.back()">Back</a>
       <h1 class="govuk-heading-l">Check your answers before you register</h1>
-      <h2 class="govuk-heading-m">Organisation details</h2>
+      <h2 class="govuk-heading-m govuk-!-margin-top-8">Organisation details</h2>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0">
+      <div *ngIf="registrationData.otherOrganisationType">
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">Organisation type</dt>
+            <dd class="govuk-summary-list__value">Other: {{registrationData.otherOrganisationType}}</dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="javascript:void(0)"
+                routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-type">
+                Change<span class="govuk-visually-hidden">Organisation type</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">Organisation details</dt>
+            <dd class="govuk-summary-list__value">{{registrationData.otherOrganisationDetail}}</dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="javascript:void(0)"
+                routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
+                Change<span class="govuk-visually-hidden">Organisation details</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+      </div>
+
+      <dl *ngIf="registrationData.organisationType"
+        class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">Organisation type</dt>
+          <dd class="govuk-summary-list__value">{{registrationData.organisationType}}</dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="javascript:void(0)"
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
+              Change<span class="govuk-visually-hidden">Organisation type</span>
+            </a>
+          </dd>
+        </div>
+      </dl>
+
+      <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Organisation name</dt>
           <dd class="govuk-summary-list__value">{{ registrationData.name }}</dd>
@@ -18,10 +59,11 @@
         </div>
       </dl>
 
-      <dl *ngIf="registrationData.companyHouseNumber" class="govuk-summary-list govuk-!-margin-bottom-0">
+      <dl *ngIf="registrationData.companyHouseNumber"
+        class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Company registration number</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.companyHouseNumber }}</dd>
+          <dd class="govuk-summary-list__value">{{registrationData.companyHouseNumber}}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:history.back()"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/company-house-details">
@@ -31,11 +73,20 @@
         </div>
       </dl>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0"
+      <dl *ngIf="registrationData.address"
+        class="govuk-summary-list"
         [ngClass]="{ 'govuk-summary-list--no-border':registrationData.dxNumber}">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Organisation address</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.address }}</dd>
+          <dd class="govuk-summary-list__value">
+            <div>{{registrationData.address.addressLine1}}</div>
+            <div *ngIf="registrationData.address.addressLine2">{{registrationData.address.addressLine2}}</div>
+            <div *ngIf="registrationData.address.addressLine3">{{registrationData.address.addressLine3}}</div>
+            <div>{{registrationData.address.postTown}}</div>
+            <div *ngIf="registrationData.address.county">{{registrationData.address.county}}</div>
+            <div>{{registrationData.address.postCode}}</div>
+            <div>{{registrationData.address.country}}</div>
+          </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)">
               Change<span class="govuk-visually-hidden">Organisation address</span>
@@ -44,24 +95,38 @@
         </div>
       </dl>
 
-      <dl *ngIf="registrationData.dxNumber" class="govuk-summary-list govuk-!-margin-bottom-0">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">DX reference</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.dxNumber }}</dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)"
-              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/document-exchange-reference-details">
-              Change<span class="govuk-visually-hidden">DX reference</span>
-            </a>
-          </dd>
-        </div>
-      </dl>
+      <div *ngIf="registrationData.dxNumber">
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">DX number</dt>
+            <dd class="govuk-summary-list__value">{{registrationData.dxNumber}}</dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="javascript:void(0)"
+                routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/document-exchange-reference-details">
+                Change<span class="govuk-visually-hidden">DX number</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+        <dl *ngIf="registrationData.dxExchange"
+          class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">DX exchange</dt>
+            <dd class="govuk-summary-list__value">{{registrationData.dxExchange}}</dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="javascript:void(0)"
+                routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/document-exchange-reference-details">
+                Change<span class="govuk-visually-hidden">DX reference</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+      </div>
 
-
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0 govuk-summary-list--no-border">
+      <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Service to access</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.services }}</dd>
+          <dd class="govuk-summary-list__value">{{registrationData.services}}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-services-access">
@@ -71,22 +136,25 @@
         </div>
       </dl>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">Organisation type</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.organisationType }}</dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)" routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-type">
-              Change<span class="govuk-visually-hidden">Organisation type</span>
-            </a>
-          </dd>
-        </div>
-      </dl>
-
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0 govuk-summary-list--no-border">
+      <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Regulatory organisation type</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.regulators[0].regulatorName }}</dd>
+          <dd class="govuk-summary-list__value">
+            <div *ngFor="let regulator of registrationData.regulators">
+              <ng-container [ngSwitch]="regulator.regulatorType">
+                <span *ngSwitchCase="regulatoryType.Other">
+                  {{regulator.regulatorType}}: {{regulator.regulatorName}} ref: {{regulator.organisationRegistrationNumber}}
+                </span>
+                <span *ngSwitchCase="regulatoryType.NotApplicable">
+                  {{regulator.regulatorType}}
+                </span>
+                <span *ngSwitchDefault>
+                  {{regulator.regulatorType}} ref: {{regulator.organisationRegistrationNumber}}
+                </span>
+                <br />
+              </ng-container>
+            </div>
+          </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
@@ -96,39 +164,24 @@
         </div>
       </dl>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0">
+      <h2 class="govuk-heading-m govuk-!-margin-top-8">Administration details</h2>
+      <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">What regulator are you (as an individual) registered with?</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.regulatorRegisteredWith }}</dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="javascript:void(0)"
-              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
-              Change<span class="govuk-visually-hidden">What regulator are you (as an individual) registered
-                with?</span>
-            </a>
-          </dd>
-        </div>
-      </dl>
-      <br>
-      <h2 class="govuk-heading-m">Administration details</h2>
-
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0">
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key">First name</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.firstName }}</dd>
+          <dt class="govuk-summary-list__key">First name(s)</dt>
+          <dd class="govuk-summary-list__value">{{registrationData.contactDetails.firstName}}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
-              Change<span class="govuk-visually-hidden">First name</span>
+              Change<span class="govuk-visually-hidden">First name(s)</span>
             </a>
           </dd>
         </div>
       </dl>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0">
+      <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Last name</dt>
-          <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.lastName }}</dd>
+          <dd class="govuk-summary-list__value">{{registrationData.contactDetails.lastName}}</dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
               routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/contact-details">
@@ -138,7 +191,7 @@
         </div>
       </dl>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-0">
+      <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Email address</dt>
           <dd class="govuk-summary-list__value">{{ registrationData.contactDetails.workEmailAddress }}</dd>
@@ -150,8 +203,36 @@
           </dd>
         </div>
       </dl>
-      <br>
-      <h2 class="govuk-heading-m">Confirm your registration details</h2>
+
+      <dl class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">What regulators are you (as an individual) registered with?</dt>
+          <dd class="govuk-summary-list__value">
+            <div *ngFor="let regulator of registrationData.individualRegulators">
+              <ng-container [ngSwitch]="regulator.regulatorType">
+                <span *ngSwitchCase="regulatoryType.Other">
+                  {{regulator.regulatorType}}: {{regulator.regulatorName}} ref: {{regulator.organisationRegistrationNumber}}
+                </span>
+                <span *ngSwitchCase="regulatoryType.NotApplicable">
+                  {{regulator.regulatorType}}
+                </span>
+                <span *ngSwitchDefault>
+                  {{regulator.regulatorType}} ref: {{regulator.organisationRegistrationNumber}}
+                </span>
+                <br />
+              </ng-container>
+            </div>
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="javascript:void(0)"
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-with-regulator">
+              Change<span class="govuk-visually-hidden">What regulators are you (as an individual) registered with?</span>
+            </a>
+          </dd>
+        </div>
+      </dl>
+
+      <h2 class="govuk-heading-m govuk-!-margin-top-8">Confirm your registration details</h2>
       <p>Ensure that:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>your personal and organisation detils are correct</li>
@@ -169,23 +250,14 @@
       </div>
 
       <div class="govuk-body govuk-!-margin-top-6">
-        <form>
+        <form [formGroup]="cyaFormGroup">
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" type="checkbox" id="confirm-terms-and-conditions"
               name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions">
             <label class="govuk-label govuk-checkboxes__label" for="confirm-terms-and-conditions">
               You have read and understood the
               <a href="javascript:void(0)" target="_blank"
-                routerLink="/terms-and-conditions-register-other-org">terms and conditions</a>
-              and are eligible for an account to manage your organisation and cases
-            </label>
-          </div>
-          <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" type="checkbox" id="confirm-code-of-conduct"
-              name="confirmCodeOfConduct" formControlName="confirmCodeOfConduct">
-            <label class="govuk-label govuk-checkboxes__label" for="confirm-code-of-conduct">
-              You have read and understood the
-              <a href="javascript:void(0)" target="_blank">MyHMCTS code of conduct</a>
+                routerLink="/terms-and-conditions">terms and conditions</a>
               and are eligible for an account to manage your organisation and cases
             </label>
           </div>
