--- a/src/register-org/components/registered-regulator/registered-regulator.component.html
+++ b/src/register-org/components/registered-regulator/registered-regulator.component.html
@@ -1,7 +1,7 @@
 <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <a class="govuk-back-link" href="javascript:history.back()">Back</a>
+        <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
         <span class="govuk-caption-xl">Register an organisation</span>
         <h1 class="govuk-heading-xl">
             What regulator are you (as in individual) registered with?
