--- a/src/register-org/components/company-house-details/company-house-details.component.html
+++ b/src/register-org/components/company-house-details/company-house-details.component.html
@@ -18,7 +18,7 @@
   </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a class="govuk-back-link" href="{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/organisation-type">Back</a>
+      <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">What is your company name and Companies House number?</h1>
       <hr>
