--- a/src/register-org/containers/registered-address/registered-address.component.html
+++ b/src/register-org/containers/registered-address/registered-address.component.html
@@ -2,7 +2,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <!-- go back to previous page if not on international page, reset page otherwise -->
-      <a *ngIf="!startedInternational" class="govuk-back-link" href="javascript:history.back()">Back</a>
+      <a *ngIf="!startedInternational" class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
       <a *ngIf="startedInternational" class="govuk-back-link"
         href="javascript:window.location.href=window.location.href">Back</a>
       <span class="govuk-caption-xl">Register an organisation</span>
