--- a/src/register-org/components/regulator-details/regulator-details.component.html
+++ b/src/register-org/components/regulator-details/regulator-details.component.html
@@ -108,7 +108,7 @@
             </div>
           </div>
           <div class="govuk-button-group">
-            <button type="submit" class="govuk-button govuk-button--primary" (click)="onContinueClicked()">Continue</button>
+            <button class="govuk-button govuk-button--primary" (click)="onContinue()">Continue</button>
           </div>
           <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
         </form>
