--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -25,8 +25,8 @@
               </div>
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item" *ngFor="let service of services">
-                  <input class="govuk-checkboxes__input" [id]="service.key" type="checkbox" [value]="service"
-                    name="services" [checked]="service.selected" (change)="onServicesSelectionChange($event)">
+                  <input class="govuk-checkboxes__input" [id]="service.key" type="checkbox" [value]="service.key"
+                    name="services" formArrayName="services" [checked]="service.selected" (change)="onServicesSelectionChange($event)">
                   <label class="govuk-label govuk-checkboxes__label" [for]="service.key">
                     {{service.value}}
                   </label>
