--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -113,7 +113,7 @@
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">Service to access</dt>
           <dd class="govuk-summary-list__value">
-            <div *ngFor="let service of registrationData.services">
+            <div *ngFor="let service of services">
               {{service}}
             </div>
           </dd>
