--- a/src/register-org/containers/registered-address/registered-address.component.html
+++ b/src/register-org/containers/registered-address/registered-address.component.html
@@ -16,11 +16,13 @@
           information register</a>.
       </p>
         <xuilib-write-address-field [formGroup]="formGroup" [internationalMode]="true"
-          [startedInternational]="startedInternational"
+          [startedInternational]="startedInternational" [addressChosen]="addressChosen"
           [isInternational]="isInternational" [submissionAttempted]="submissionAttempted"
           (postcodeOptionSelected)="onPostcodeOptionSelected()"
           (internationalModeStart)="onInternationalModeStart()"
-          (ukAddressOptionSelected)="onOptionSelected($event)"></xuilib-write-address-field>
+          (ukAddressOptionSelected)="onOptionSelected($event)"
+          (canSelectAddress)="onAddressSelectable($event)"
+          (resetSubmission)="onResetSubmission()"></xuilib-write-address-field>
 
         <div class="govuk-button-group">
           <button type="submit" class="govuk-button" data-module="govuk-button" (click)="onContinue()">
