Post Registration Data

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -190,7 +190,7 @@
             </label>
           </div>
           <div class="govuk-body govuk-!-margin-top-6">
-            <button class="govuk-button govuk-buton--primary">Confirm and submit</button>
+            <button class="govuk-button govuk-buton--primary" (click)="onSubmitData()" type="button">Confirm and submit</button>
           </div>
         </form>
       </div>
