EUI-8838 Register Other Other - Back link not working

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -87,7 +87,7 @@
           </dd>
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="javascript:void(0)"
-              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-address">
+              routerLink="/{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/registered-address/internal">
               Change<span class="govuk-visually-hidden">Organisation address</span>
             </a>
           </dd>
