Add Validation for checkbox

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -2,6 +2,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
+      <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <h1 class="govuk-heading-l">Check your answers before you register</h1>
       <h2 class="govuk-heading-m govuk-!-margin-top-8">Organisation details</h2>
 
@@ -212,17 +213,20 @@
         </strong>
       </div>
 
-      <div class="govuk-body govuk-!-margin-top-6">
+      <div class="govuk-body govuk-!-margin-top-6" [ngClass]="{'govuk-form-group--error': validationErrors.length>0}">
         <form [formGroup]="cyaFormGroup">
+          <div *ngIf="validationErrors.length>0" class="govuk-error-message">
+            <span class="govuk-visually-hidden">Error:</span> {{validationErrors[0].message}}
+          </div>
           <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" type="checkbox" id="confirm-terms-and-conditions"
-              name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions">
-            <label class="govuk-label govuk-checkboxes__label" for="confirm-terms-and-conditions">
-              You have read and understood the
-              <a href="javascript:void(0)" target="_blank"
-                routerLink="/terms-and-conditions">terms and conditions</a>
-              and are eligible for an account to manage your organisation and cases
-            </label>
+              <input class="govuk-checkboxes__input" type="checkbox" id="confirm-terms-and-conditions"
+              name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions" (change)="termsAndConditionsChange($event)">
+              <label class="govuk-label govuk-checkboxes__label" for="confirm-terms-and-conditions">
+                You have read and understood the
+                <a href="javascript:void(0)" target="_blank"
+                  routerLink="/terms-and-conditions">terms and conditions</a>
+                and are eligible for an account to manage your organisation and cases
+              </label>
           </div>
           <div class="govuk-body govuk-!-margin-top-6">
             <button class="govuk-button govuk-buton--primary" (click)="onSubmitData()" type="button">Confirm and submit</button>
